--- a/src/main/java/com/diyiliu/gui/frame/MainFrm.form
+++ b/src/main/java/com/diyiliu/gui/frame/MainFrm.form
@@ -9,125 +9,219 @@
       <size top="10" left="10" bottom="10" right="10"/>
     </border>
     <children>
-      <grid id="b0f3c" layout-manager="GridLayoutManager" row-count="1" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="1fc1f" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="North"/>
         <properties/>
-        <border type="empty">
-          <size top="0" left="0" bottom="15" right="0"/>
-        </border>
+        <border type="none"/>
         <children>
-          <component id="e8e54" class="javax.swing.JLabel">
+          <toolbar id="e14ed" binding="toolBar">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="姓名"/>
-            </properties>
-          </component>
-          <component id="33f09" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="电话"/>
-            </properties>
-          </component>
-          <component id="ea18b" class="javax.swing.JTextField" binding="tfTel">
-            <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="-1"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="-1" height="20"/>
               </grid>
             </constraints>
             <properties/>
-          </component>
-          <component id="99f48" class="javax.swing.JButton" binding="btClear">
+            <border type="none"/>
+            <children>
+              <component id="408b1" class="javax.swing.JButton" binding="btHome">
+                <constraints/>
+                <properties>
+                  <icon value="image/房子.png"/>
+                  <text value="首页"/>
+                  <toolTipText value=""/>
+                </properties>
+              </component>
+              <component id="3103c" class="javax.swing.JButton" binding="btSearch">
+                <constraints/>
+                <properties>
+                  <icon value="image/查找.png"/>
+                  <text value="查找"/>
+                  <toolTipText value=""/>
+                </properties>
+              </component>
+              <component id="fde6b" class="javax.swing.JButton" binding="btMember">
+                <constraints/>
+                <properties>
+                  <icon value="image/用户.png"/>
+                  <text value="人员"/>
+                  <toolTipText value=""/>
+                </properties>
+              </component>
+              <component id="6e965" class="javax.swing.JButton" binding="btSet">
+                <constraints/>
+                <properties>
+                  <icon value="image/设定.png"/>
+                  <text value="设定"/>
+                  <toolTipText value=""/>
+                </properties>
+              </component>
+              <component id="c7127" class="javax.swing.JButton" binding="btStats">
+                <constraints/>
+                <properties>
+                  <icon value="image/数据图.png"/>
+                  <text value="统计"/>
+                </properties>
+              </component>
+              <component id="cd41" class="javax.swing.JButton" binding="btLock">
+                <constraints/>
+                <properties>
+                  <icon value="image/锁定.png"/>
+                  <text value="锁屏"/>
+                  <toolTipText value=""/>
+                </properties>
+              </component>
+            </children>
+          </toolbar>
+          <grid id="6c66f" layout-manager="GridLayoutManager" row-count="1" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="清空"/>
-            </properties>
-          </component>
-          <component id="eb99a" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="毛重"/>
-            </properties>
-          </component>
-          <component id="ebf4d" class="javax.swing.JTextField" binding="tfGross">
-            <constraints>
-              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <minimum-size width="100" height="-1"/>
-                <preferred-size width="100" height="-1"/>
-                <maximum-size width="100" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="2a091" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="单价"/>
-            </properties>
-          </component>
-          <component id="685c8" class="javax.swing.JTextField" binding="tfPrice">
-            <constraints>
-              <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="81767" class="javax.swing.JButton" binding="btSave">
-            <constraints>
-              <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="保存"/>
-            </properties>
-          </component>
-          <component id="ebe19" class="javax.swing.JComboBox" binding="cbName">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <minimum-size width="100" height="-1"/>
-                <preferred-size width="100" height="-1"/>
-                <maximum-size width="100" height="-1"/>
-              </grid>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-          </component>
-          <component id="2775f" class="javax.swing.JButton" binding="btUpdate">
-            <constraints>
-              <grid row="0" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="修改"/>
-            </properties>
-          </component>
+            <border type="empty">
+              <size top="0" left="0" bottom="15" right="0"/>
+            </border>
+            <children>
+              <component id="a02c0" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <labelFor value="129aa"/>
+                  <text value="姓名"/>
+                </properties>
+              </component>
+              <component id="e127d" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="电话"/>
+                </properties>
+              </component>
+              <component id="f7458" class="javax.swing.JTextField" binding="tfTel">
+                <constraints>
+                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="100" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="ad976" class="javax.swing.JButton" binding="btClear">
+                <constraints>
+                  <grid row="0" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="清空"/>
+                </properties>
+              </component>
+              <component id="b9b14" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="毛重"/>
+                </properties>
+              </component>
+              <component id="36616" class="javax.swing.JTextField" binding="tfGross">
+                <constraints>
+                  <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <minimum-size width="100" height="-1"/>
+                    <preferred-size width="100" height="-1"/>
+                    <maximum-size width="100" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="6c7a2" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="单价"/>
+                </properties>
+              </component>
+              <component id="71cb4" class="javax.swing.JTextField" binding="tfPrice">
+                <constraints>
+                  <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="100" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="964af" class="javax.swing.JButton" binding="btSave">
+                <constraints>
+                  <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="保存"/>
+                </properties>
+              </component>
+              <component id="9b44" class="javax.swing.JComboBox" binding="cbName">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <minimum-size width="100" height="-1"/>
+                    <preferred-size width="100" height="-1"/>
+                    <maximum-size width="100" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="265f0" class="javax.swing.JButton" binding="btUpdate">
+                <constraints>
+                  <grid row="0" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="修改"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
-      <scrollpane id="129aa">
+      <scrollpane id="d2841">
         <constraints border-constraint="Center"/>
         <properties/>
-        <border type="none">
-          <size top="15" left="0" bottom="0" right="0"/>
-        </border>
+        <border type="none"/>
         <children>
-          <component id="96003" class="javax.swing.JTable" binding="tbStock">
+          <component id="954b6" class="javax.swing.JTable" binding="tbStock">
             <constraints/>
             <properties/>
           </component>
         </children>
       </scrollpane>
+      <grid id="4c01d" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints border-constraint="South"/>
+        <properties/>
+        <border type="empty">
+          <size top="10" left="0" bottom="0" right="0"/>
+        </border>
+        <children>
+          <component id="22712" class="javax.swing.JButton" binding="btUp">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <hideActionText value="false"/>
+              <text value="上一页"/>
+            </properties>
+          </component>
+          <component id="9e3ad" class="javax.swing.JButton" binding="btDown">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="下一页"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
