--- a/src/main/java/com/diyiliu/gui/frame/MainFrm.form
+++ b/src/main/java/com/diyiliu/gui/frame/MainFrm.form
@@ -9,81 +9,77 @@
       <size top="10" left="10" bottom="10" right="10"/>
     </border>
     <children>
-      <grid id="1fc1f" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <toolbar id="17a9a" binding="toolBar">
         <constraints border-constraint="North"/>
         <properties/>
         <border type="none"/>
         <children>
-          <toolbar id="e14ed" binding="toolBar">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="-1" height="20"/>
-              </grid>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="408b1" class="javax.swing.JButton" binding="btHome">
-                <constraints/>
-                <properties>
-                  <icon value="image/房子.png"/>
-                  <text value="首页"/>
-                  <toolTipText value=""/>
-                </properties>
-              </component>
-              <component id="3103c" class="javax.swing.JButton" binding="btSearch">
-                <constraints/>
-                <properties>
-                  <icon value="image/查找.png"/>
-                  <text value="查找"/>
-                  <toolTipText value=""/>
-                </properties>
-              </component>
-              <component id="fde6b" class="javax.swing.JButton" binding="btMember">
-                <constraints/>
-                <properties>
-                  <icon value="image/用户.png"/>
-                  <text value="人员"/>
-                  <toolTipText value=""/>
-                </properties>
-              </component>
-              <component id="6e965" class="javax.swing.JButton" binding="btSet">
-                <constraints/>
-                <properties>
-                  <icon value="image/设定.png"/>
-                  <text value="设定"/>
-                  <toolTipText value=""/>
-                </properties>
-              </component>
-              <component id="c7127" class="javax.swing.JButton" binding="btStats">
-                <constraints/>
-                <properties>
-                  <icon value="image/数据图.png"/>
-                  <text value="统计"/>
-                </properties>
-              </component>
-              <component id="cd41" class="javax.swing.JButton" binding="btLock">
-                <constraints/>
-                <properties>
-                  <icon value="image/锁定.png"/>
-                  <text value="锁屏"/>
-                  <toolTipText value=""/>
-                </properties>
-              </component>
-            </children>
-          </toolbar>
-          <grid id="6c66f" layout-manager="GridLayoutManager" row-count="1" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <component id="7bdfb" class="javax.swing.JButton" binding="btHome">
+            <constraints/>
+            <properties>
+              <icon value="image/房子.png"/>
+              <text value="首页"/>
+              <toolTipText value=""/>
+            </properties>
+          </component>
+          <component id="788d8" class="javax.swing.JButton" binding="btSearch">
+            <constraints/>
+            <properties>
+              <icon value="image/查找.png"/>
+              <text value="查找"/>
+              <toolTipText value=""/>
+            </properties>
+          </component>
+          <component id="9e24b" class="javax.swing.JButton" binding="btMember">
+            <constraints/>
+            <properties>
+              <icon value="image/用户.png"/>
+              <text value="人员"/>
+              <toolTipText value=""/>
+            </properties>
+          </component>
+          <component id="77bda" class="javax.swing.JButton" binding="btSet">
+            <constraints/>
+            <properties>
+              <icon value="image/设定.png"/>
+              <text value="设定"/>
+              <toolTipText value=""/>
+            </properties>
+          </component>
+          <component id="83cdb" class="javax.swing.JButton" binding="btStats">
+            <constraints/>
+            <properties>
+              <icon value="image/数据图.png"/>
+              <text value="统计"/>
+            </properties>
+          </component>
+          <component id="d6427" class="javax.swing.JButton" binding="btLock">
+            <constraints/>
+            <properties>
+              <icon value="image/锁定.png"/>
+              <text value="锁屏"/>
+              <toolTipText value=""/>
+            </properties>
+          </component>
+        </children>
+      </toolbar>
+      <grid id="3e3d5" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints border-constraint="Center"/>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <grid id="66f90" layout-manager="GridLayoutManager" row-count="1" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="empty">
-              <size top="0" left="0" bottom="15" right="0"/>
+              <size top="10" left="0" bottom="10" right="0"/>
             </border>
             <children>
-              <component id="a02c0" class="javax.swing.JLabel">
+              <component id="3c94a" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -92,7 +88,7 @@
                   <text value="姓名"/>
                 </properties>
               </component>
-              <component id="e127d" class="javax.swing.JLabel">
+              <component id="1f5ee" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -100,7 +96,7 @@
                   <text value="电话"/>
                 </properties>
               </component>
-              <component id="f7458" class="javax.swing.JTextField" binding="tfTel">
+              <component id="c879d" class="javax.swing.JTextField" binding="tfTel">
                 <constraints>
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="100" height="-1"/>
@@ -108,7 +104,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="ad976" class="javax.swing.JButton" binding="btClear">
+              <component id="282a2" class="javax.swing.JButton" binding="btClear">
                 <constraints>
                   <grid row="0" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -116,7 +112,7 @@
                   <text value="清空"/>
                 </properties>
               </component>
-              <component id="b9b14" class="javax.swing.JLabel">
+              <component id="1e461" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -124,7 +120,7 @@
                   <text value="毛重"/>
                 </properties>
               </component>
-              <component id="36616" class="javax.swing.JTextField" binding="tfGross">
+              <component id="978e" class="javax.swing.JTextField" binding="tfGross">
                 <constraints>
                   <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <minimum-size width="100" height="-1"/>
@@ -136,7 +132,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="6c7a2" class="javax.swing.JLabel">
+              <component id="1fe42" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -144,7 +140,7 @@
                   <text value="单价"/>
                 </properties>
               </component>
-              <component id="71cb4" class="javax.swing.JTextField" binding="tfPrice">
+              <component id="2c5c4" class="javax.swing.JTextField" binding="tfPrice">
                 <constraints>
                   <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="100" height="-1"/>
@@ -154,7 +150,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="964af" class="javax.swing.JButton" binding="btSave">
+              <component id="74c07" class="javax.swing.JButton" binding="btSave">
                 <constraints>
                   <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -162,7 +158,7 @@
                   <text value="保存"/>
                 </properties>
               </component>
-              <component id="9b44" class="javax.swing.JComboBox" binding="cbName">
+              <component id="c69d2" class="javax.swing.JComboBox" binding="cbName">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <minimum-size width="100" height="-1"/>
@@ -172,7 +168,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="265f0" class="javax.swing.JButton" binding="btUpdate">
+              <component id="47558" class="javax.swing.JButton" binding="btUpdate">
                 <constraints>
                   <grid row="0" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -182,44 +178,48 @@
               </component>
             </children>
           </grid>
-        </children>
-      </grid>
-      <scrollpane id="d2841">
-        <constraints border-constraint="Center"/>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="954b6" class="javax.swing.JTable" binding="tbStock">
-            <constraints/>
+          <scrollpane id="2679a">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
             <properties/>
-          </component>
-        </children>
-      </scrollpane>
-      <grid id="4c01d" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints border-constraint="South"/>
-        <properties/>
-        <border type="empty">
-          <size top="10" left="0" bottom="0" right="0"/>
-        </border>
-        <children>
-          <component id="22712" class="javax.swing.JButton" binding="btUp">
+            <border type="none"/>
+            <children>
+              <component id="38d88" class="javax.swing.JTable" binding="tbStock">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
+          <grid id="2485f" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <hideActionText value="false"/>
-              <text value="上一页"/>
-            </properties>
-          </component>
-          <component id="9e3ad" class="javax.swing.JButton" binding="btDown">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="下一页"/>
-            </properties>
-          </component>
+            <properties/>
+            <border type="empty">
+              <size top="10" left="0" bottom="0" right="0"/>
+            </border>
+            <children>
+              <component id="fe118" class="javax.swing.JButton" binding="btUp">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <hideActionText value="false"/>
+                  <text value="上一页"/>
+                </properties>
+              </component>
+              <component id="4af6b" class="javax.swing.JButton" binding="btDown">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="下一页"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
     </children>
