--- a/src/main/java/com/diyiliu/gui/frame/MainFrm.form
+++ b/src/main/java/com/diyiliu/gui/frame/MainFrm.form
@@ -73,7 +73,7 @@
           </component>
         </children>
       </toolbar>
-      <grid id="3e3d5" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="3e3d5" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="Center"/>
         <properties/>
@@ -204,10 +204,10 @@
           <grid id="2485f" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-            <border type="empty">
+            <border type="none">
               <size top="10" left="0" bottom="0" right="0"/>
             </border>
             <children>
@@ -226,6 +226,38 @@
                 </constraints>
                 <properties>
                   <text value="下一页"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="656ce" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="2145d" class="javax.swing.JLabel" binding="lbMoney">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font/>
+                  <icon value="image/bag-yen.png"/>
+                  <text value="0"/>
+                  <toolTipText value="总金额"/>
+                </properties>
+              </component>
+              <component id="6618f" class="javax.swing.JLabel" binding="lbQuality">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font/>
+                  <icon value="image/weigh.png"/>
+                  <text value="0"/>
+                  <toolTipText value="总重量"/>
                 </properties>
               </component>
             </children>
